update errors 8552262586f29dba840839ebbd8d3b41ce1a20cd

--- a/nr-add-ps-doc/ig/index.html
+++ b/nr-add-ps-doc/ig/index.html
@@ -299,7 +299,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <h3 id="la-liste-des-guides-dimplémentation-de-lans">La liste des guides d’implémentation de l’ANS</h3>
 
-<p>La liste des guides d’implémentation est accessible <a href="https://interop.esante.gouv.fr/ig/">à cette adresse</a>.</p>
+<p>La liste des guides d’implémentation est accessible <a href="https://interop.esante.gouv.fr/ig/">sur le catalogue des guides de l’ANS</a>.</p>
 
 <h3 id="reporter-un-problème-ou-une-suggestion-damélioration">Reporter un problème ou une suggestion d’amélioration</h3>
 
@@ -360,7 +360,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Dec 23, 2025 15:35+0000">2025-12-23</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Dec 23, 2025 15:38+0000">2025-12-23</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
