--- a/nr-add-ps-doc/ig/erreurs.html
+++ b/nr-add-ps-doc/ig/erreurs.html
@@ -234,7 +234,7 @@ L’erreur vient du fait qu’il y a des fichiers qui ne finissent pas par .md o
 </ul>
 
 <h3 id="erreur-missing-snapshot">Erreur Missing Snapshot</h3>
-<p>FSH nécessite d’avoir des packages avec snapshot et differential. Il est possible de générer les snapshots dans le FHIR CACHE:</p>
+<p>FSH nécessite d’avoir des packages avec snapshot et differential. Les packages historiques (&lt;2024) n’avaient pas de snapshot, engendrant des erreurs de générations lorsque ceux-ci sont mis en dépendaces. Pour régler ce problème, il est possible de générer les snapshots dans le FHIR CACHE :</p>
 
 <ul>
   <li>Installer dotnet sdk : https://dotnet.microsoft.com/en-us/download</li>
@@ -242,6 +242,7 @@ L’erreur vient du fait qu’il y a des fichiers qui ne finissent pas par .md o
 </ul>
 
 <p>Exemples d’usage :</p>
+
 <ul>
   <li><code class="language-plaintext highlighter-rouge">fhir bake --package hl7.fhir.fr.core</code></li>
   <li><code class="language-plaintext highlighter-rouge">fhir bake --package ans.annuaire.fhir.r4</code></li>
@@ -291,7 +292,7 @@ L’erreur vient du fait qu’il y a des fichiers qui ne finissent pas par .md o
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Dec 23, 2025 15:35+0000">2025-12-23</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Dec 23, 2025 15:38+0000">2025-12-23</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
