--- a/nr-add-ps-doc/ig/qa-ipreview.html
+++ b/nr-add-ps-doc/ig/qa-ipreview.html
@@ -166,7 +166,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Tue, Dec 23, 2025 15:35+0000">2025-12-23</span>
+. Generated           <span title="Tue, Dec 23, 2025 15:38+0000">2025-12-23</span>
 
                     <br/>
 
@@ -196,7 +196,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Tue, Dec 23, 2025 15:35+0000">2025-12-23</span>
+. Generated           <span title="Tue, Dec 23, 2025 15:38+0000">2025-12-23</span>
 
                     <br/>
 
@@ -1272,7 +1272,7 @@ Afin de faciliter les actions au regards des IG, l’ANS  met à disposition un 
           <a href="https://interop.esante.gouv.fr/ig/">interop.esante.gouv.fr</a>
         </td>
         <td>
-La liste des guides d’implémentation est accessible           <a href="https://interop.esante.gouv.fr/ig/">à cette adresse</a>
+La liste des guides d’implémentation est accessible           <a href="https://interop.esante.gouv.fr/ig/">sur le catalogue des guides de l’ANS</a>
 .
         </td>
       </tr>
