Update doc_ps.md 5433c6dce3b0ec1d4d57a653d35c5744dd6496ef

--- a/nr-add-ps-doc/ig/doc_ps.html
+++ b/nr-add-ps-doc/ig/doc_ps.html
@@ -244,11 +244,13 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
     <p>Capture d'écran du webinaire d'<a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">introduction à l'interopérabilité</a></p>
 </div>
 
-<p>Dans votre pratique quotidienne, cela signifie que les informations patient que vous saisissez dans un logiciel peuvent être partagées pour débloquer tout leur potentiel :</p>
+<p>Dans votre pratique quotidienne, cela signifie que les informations patient et données de santé peuvent être partagées et exploitées :</p>
 
 <ul>
-  <li>Aggréger les données issues de différents logiciels dans un seul logiciel (par exemple, les données du serveur de résultats de biologie se retrouvent automatiquement dans votre logiciel de soin).</li>
-  <li>Faire des projets de recherche (extraire automatiquement des informations d’intérêt)</li>
+  <li>Récupération automatique des données patient (élimination des doubles saisies et réduction des erreurs de transcription)</li>
+  <li>Amélioration de la coordination des soins entre confrères (partage sécurisé d’informations cliniques)</li>
+  <li>Gain de temps en consultation grâce à la disponibilité instantanée des résultats d’examens</li>
+  <li>Simplification de mise en place de projets de recherche (extraire automatiquement des informations d’intérêt)</li>
 </ul>
 
 <p>L’interopérabilité permet de garantir que ces données restent exploitables et compréhensibles par tous les acteurs du parcours de soins et de la recherche clinique, indépendamment des outils utilisés.</p>
@@ -302,6 +304,7 @@ FHIR seul est trop générique et peu contraignant pour garantir une interopéra
 
 
 
+
 </div>
         </div>  <!-- /inner-wrapper -->
       </div>  <!-- /row -->
@@ -340,7 +343,7 @@ FHIR seul est trop générique et peu contraignant pour garantir une interopéra
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Dec 23, 2025 15:38+0000">2025-12-23</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 29, 2025 14:42+0000">2025-12-29</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
