--- a/nr-add-examples/ig/qa-ipreview.html
+++ b/nr-add-examples/ig/qa-ipreview.html
@@ -166,7 +166,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Jan 5, 2026 13:58+0000">2026-01-05</span>
+. Generated           <span title="Mon, Jan 5, 2026 14:05+0000">2026-01-05</span>
 
                     <br/>
 
@@ -196,7 +196,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Jan 5, 2026 13:58+0000">2026-01-05</span>
+. Generated           <span title="Mon, Jan 5, 2026 14:05+0000">2026-01-05</span>
 
                     <br/>
 
@@ -289,6 +289,17 @@ Le statut doit se placer dans l’attribut “version” du fichier sushi-config
         <td>
 Pour plus d’informations, consultez la           <a href="https://interop.esante.gouv.fr/ig/">liste des guides d’implémentation</a>
  à titre d’exemple.
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="bonnes_pratiques_modeler.html">web</a>
+        </td>
+        <td>
+          <a href="https://github.com/ansforge/IG-modele/tree/main/input/fsh">github.com</a>
+        </td>
+        <td>
+Une structure squelette indique sous quels dossiers placer les artéfacts fsh dans le guide d’implémentation           <a href="https://github.com/ansforge/IG-modele/tree/main/input/fsh">modèle</a>
         </td>
       </tr>
       <tr>
