--- a/nr-add-examples/ig/bonnes_pratiques_modeler.html
+++ b/nr-add-examples/ig/bonnes_pratiques_modeler.html
@@ -444,10 +444,13 @@ Le label de publication doit se placer dans l’attribut “label” du fichier 
 
 <p>Exemple:</p>
 <blockquote>
-  <p>Alias: $PhdDevice = http://hl7.org/fhir/uv/phd/StructureDefinition/PhdDevice
-Alias: $UCUM = http://unitsofmeasure.org
-Alias: $vitalsigns = http://hl7.org/fhir/StructureDefinition/vitalsigns
-Alias: $fr-patient = https://hl7.fr/ig/fhir/core/StructureDefinition/fr-core-patient</p>
+  <p>Alias: $PhdDevice = http://hl7.org/fhir/uv/phd/StructureDefinition/PhdDevice</p>
+
+  <p>Alias: $UCUM = http://unitsofmeasure.org</p>
+
+  <p>Alias: $vitalsigns = http://hl7.org/fhir/StructureDefinition/vitalsigns</p>
+
+  <p>Alias: $fr-patient = https://hl7.fr/ig/fhir/core/StructureDefinition/fr-core-patient</p>
 </blockquote>
 
 <h3 id="exemples-de-guides-dimplémentation">Exemples de guides d’implémentation</h3>
@@ -896,7 +899,7 @@ Usage: #definition
 
       <div class="inner-wrapper">
         <p>
-          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 5, 2026 14:05+0000">2026-01-05</span>
+          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 5, 2026 14:10+0000">2026-01-05</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
